dab2c-executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway-mtls-@fpi-name@-unver
spec:
  selector:
    istio: egressgateway-@fpi-name@-unver
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: ${@fpi-name@.ctr.istio.egress.common.internal-port}
        protocol: HTTP
