dab2c-executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-iagmm-dsr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-mtls-@fpi-name@-iagmm-unver
spec:
  exportTo:
    - .
  host: ${@fpi-name@.ctr.istio.egress.se.http.iag-mm.host}
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: ${@fpi-name@.ctr.istio.egress.se.http.iag-mm.port}
        tls:
          caCertificates: /vault/secrets/ca-chain.pem
          clientCertificate: /vault/secrets/client-cert.pem
          privateKey: /vault/secrets/client-cert.key
          mode: MUTUAL
          sni: ${@fpi-name@.ctr.istio.egress.se.http.iag-mm.host}
  workloadSelector:
    matchLabels:
      app: istio-egressgateway-@fpi-name@-unver
      istio: egressgateway-@fpi-name@-unver
