dab2c-executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-iagmm-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-mtls-@fpi-name@-iagmm-unver
spec:
  exportTo:
    - .
  gateways:
    - egressgateway-mtls-@fpi-name@-unver
    - mesh
  hosts:
    - ${@fpi-name@.ctr.istio.egress.se.http.iag-mm.host}
  http:
    - match:
        - gateways:
            - mesh
          port: ${@fpi-name@.ctr.istio.egress.common.internal-port}
      route:
        - destination:
            host: egressgateway-@fpi-name@-unver
            port:
              number: ${@fpi-name@.ctr.istio.egress.common.internal-port}
          weight: 100
      retries:
        attempts: 0
    - match:
        - gateways:
            - egressgateway-mtls-@fpi-name@-unver
          port: ${@fpi-name@.ctr.istio.egress.common.internal-port}
      route:
        - destination:
            host: ${@fpi-name@.ctr.istio.egress.se.http.iag-mm.host}
            port:
              number: ${@fpi-name@.ctr.istio.egress.se.http.iag-mm.port}
          weight: 100
      retries:
        attempts: 0
